--- a/PinSpot/app/src/main/res/layout/fav_pin_list_item.xml
+++ b/PinSpot/app/src/main/res/layout/fav_pin_list_item.xml
@@ -3,14 +3,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/primaryLightColor"
     xmlns:tools="http://schemas.android.com/tools">
 
     <TextView
         android:id="@+id/textview_fav_pin_title"
+        android:background="@drawable/edit_text_bg"
         android:layout_width="222dp"
         android:layout_height="24dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+        android:textColor="@color/white"
+        android:gravity="center"
+        android:backgroundTint="@color/primaryDarkColor"
+        android:textStyle="bold"
         android:textAppearance="?attr/textAppearanceTitleMedium"
         app:layout_constraintEnd_toStartOf="@+id/imageview_favorite_pin"
         app:layout_constraintHorizontal_bias="1.0"
@@ -25,7 +31,11 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="16dp"
+        android:gravity="center"
+        android:background="@drawable/edit_text_bg"
+        android:backgroundTint="@color/primaryDarkColor"
         android:textAppearance="?attr/textAppearanceBody1"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/imageview_favorite_pin"
         app:layout_constraintHorizontal_bias="0.46"
@@ -42,6 +52,10 @@
         android:layout_marginTop="8dp"
         android:layout_marginBottom="16dp"
         android:textAppearance="?attr/textAppearanceBody1"
+        android:background="@drawable/edit_text_bg"
+        android:backgroundTint="@color/primaryDarkColor"
+        android:gravity="center"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/imageview_favorite_pin"
         app:layout_constraintHorizontal_bias="1.0"
@@ -74,6 +88,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_launcher_background" />
+        app:srcCompat="@drawable/ic_launcher_background"
+        android:layout_margin="10dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
