--- a/PinSpot/app/src/main/res/layout/fragment_map.xml
+++ b/PinSpot/app/src/main/res/layout/fragment_map.xml
@@ -34,20 +34,19 @@
         app:layout_constraintVertical_bias="0.86"
         app:maxImageSize="48dp" />
 
-    <Button
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/searchButton"
-        android:layout_width="74dp"
-        android:layout_height="66dp"
-        android:background="@drawable/edit_text_bg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
         android:contentDescription="@string/app_name"
-        app:icon="@android:drawable/ic_search_category_default"
-        app:iconSize="28dp"
-        app:iconTint="#000000"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:src="?android:attr/actionModeWebSearchDrawable"
+        app:backgroundTint="#80D6FF"
+        app:layout_constraintBottom_toBottomOf="@+id/mapv"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.045"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="@+id/mapv"
+        app:layout_constraintVertical_bias="0.023" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
