--- a/PinSpot/app/src/main/res/layout/activity_insert_pin.xml
+++ b/PinSpot/app/src/main/res/layout/activity_insert_pin.xml
@@ -51,8 +51,9 @@
         android:layout_height="112dp"
         android:layout_gravity="end|bottom"
         android:layout_margin="16dp"
-        android:backgroundTint="@color/white"
+        android:backgroundTint="@color/secondaryDarkColor"
         android:contentDescription="Spot a new place"
+        app:tint="@color/white"
         android:src="@drawable/ic_baseline_arrow_back_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -99,6 +100,7 @@
         android:layout_marginStart="20dp"
         android:backgroundTint="@color/secondaryDarkColor"
         android:contentDescription="Spot a new place"
+        app:tint="@color/white"
         android:src="@drawable/library_foreground"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/takePic_button"
@@ -117,29 +119,13 @@
         android:backgroundTint="@color/secondaryDarkColor"
         android:contentDescription="Spot a new place"
         android:src="@drawable/takephoto_foreground"
+        app:tint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.69"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.635"
-        app:maxImageSize="48dp" />
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/download"
-        android:layout_width="wrap_content"
-        android:layout_height="112dp"
-        android:layout_gravity="end|bottom"
-        android:layout_margin="16dp"
-        android:backgroundTint="@color/secondaryDarkColor"
-        android:contentDescription="Spot a new place"
-        android:src="@drawable/download_foreground"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.300"
-        app:layout_constraintStart_toEndOf="@+id/takePic_button"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.635"
+        app:layout_constraintVertical_bias="0.64"
         app:maxImageSize="48dp" />
 
     <EditText
@@ -167,7 +153,7 @@
         android:layout_width="128dp"
         android:layout_height="74dp"
         android:layout_marginBottom="72dp"
-        android:backgroundTint="@color/primaryColor"
+        android:backgroundTint="@color/secondaryDarkColor"
         android:text="Insert"
         android:textSize="18sp"
         app:cornerRadius="20dp"
