--- a/PinSpot/app/src/main/res/layout/activity_insert_pin.xml
+++ b/PinSpot/app/src/main/res/layout/activity_insert_pin.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/primaryColor"
+    android:background="@color/primaryLightColor"
     tools:context=".ui.main.InsertPinActivity">
 
 
@@ -13,9 +13,9 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginBottom="50dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/titleAddNewPin_textView"
@@ -46,14 +46,13 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+        style="@style/Button"
         android:id="@+id/closePinInfo_button"
         android:layout_width="wrap_content"
         android:layout_height="112dp"
         android:layout_gravity="end|bottom"
         android:layout_margin="16dp"
-        android:backgroundTint="@color/secondaryDarkColor"
         android:contentDescription="Spot a new place"
-        app:tint="@color/white"
         android:src="@drawable/ic_baseline_arrow_back_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -61,14 +60,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
-        app:maxImageSize="48dp" />
+        app:maxImageSize="48dp"
+        app:tint="@color/white" />
 
     <com.google.android.material.progressindicator.LinearProgressIndicator
-        android:layout_width="0dp"
         android:id="@+id/uploadProgressBar"
-        android:visibility="gone"
-        android:indeterminate="true"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -91,13 +91,14 @@
 
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+        style="@style/Button"
         android:id="@+id/choosePicFromLocal_button"
         android:layout_width="wrap_content"
         android:layout_height="66dp"
         android:layout_gravity="end|bottom"
         android:layout_margin="16dp"
         android:layout_marginStart="20dp"
-        android:backgroundTint="@color/secondaryDarkColor"
+
         android:contentDescription="Spot a new place"
         android:src="@drawable/library_foreground"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -110,12 +111,14 @@
         app:tint="@color/white" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+        style="@style/Button"
+
         android:id="@+id/takePic_button"
         android:layout_width="wrap_content"
         android:layout_height="112dp"
         android:layout_gravity="end|bottom"
         android:layout_margin="16dp"
-        android:backgroundTint="@color/secondaryDarkColor"
+
         android:contentDescription="Spot a new place"
         android:src="@drawable/takephoto_foreground"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -129,13 +132,15 @@
 
     <EditText
         android:id="@+id/newPinTitle_edt"
+        style="@style/TextWiew"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:background="@drawable/edit_text_bg"
-        android:backgroundTint="@color/secondaryDarkColor"
+        android:backgroundTint="@color/primaryColor"
         android:drawableLeft="@drawable/ic_baseline_info_24"
         android:drawablePadding="8dp"
-        android:hint="Name"
+        android:drawableTint="@color/white"
+        android:hint="Title"
         android:minHeight="48dp"
         android:padding="8dp"
         android:textColor="@color/white"
@@ -152,10 +157,12 @@
         android:layout_width="128dp"
         android:layout_height="74dp"
         android:layout_marginBottom="56dp"
-        android:backgroundTint="@color/secondaryDarkColor"
-        android:text="Insert"
+        android:backgroundTint="@color/primaryColor"
+        android:text="Spot it"
+        android:textColor="@color/white"
         android:textSize="18sp"
         app:cornerRadius="20dp"
+        app:iconTint="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
