--- a/PinSpot/app/src/main/res/layout/fragment_map.xml
+++ b/PinSpot/app/src/main/res/layout/fragment_map.xml
@@ -26,13 +26,15 @@
         android:contentDescription="Spot a new place"
         android:src="@drawable/spot_place_foreground"
         android:backgroundTint="@color/primaryColor"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.954"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.86"
-        app:maxImageSize="48dp" />
+        app:maxImageSize="48dp"
+        app:tint="@color/white"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/searchButton"
@@ -41,12 +43,13 @@
         android:clickable="true"
         android:contentDescription="@string/app_name"
         android:src="?android:attr/actionModeWebSearchDrawable"
-        app:backgroundTint="#80D6FF"
+        app:backgroundTint="@color/primaryLightColor"
         app:layout_constraintBottom_toBottomOf="@+id/mapv"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.045"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/mapv"
-        app:layout_constraintVertical_bias="0.023" />
+        app:layout_constraintVertical_bias="0.023"
+        app:tint="@color/white"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
