--- a/PinSpot/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/PinSpot/app/src/main/res/menu/bottom_nav_menu.xml
@@ -4,15 +4,15 @@
         android:id="@+id/mapFragment"
         android:icon="@drawable/map_foreground"
         android:enabled="true"
-        android:title="Mappa"/>
+        android:title="Map"/>
     <item
         android:id="@+id/favPlacesFragment"
         android:icon="@drawable/star_foreground"
         android:enabled="true"
-        android:title="Preferiti" />
+        android:title="Favorites" />
     <item
         android:id="@+id/profileFragment"
-        android:icon="@drawable/profile_foreground"
         android:enabled="true"
-        android:title="Profilo"/>
+        android:icon="@drawable/settings_foreground"
+        android:title="Settings" />
 </menu>
