--- a/PinSpot/app/src/main/res/values/colors.xml
+++ b/PinSpot/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="primaryColor">#42a5f5</color>
-    <color name="primaryLightColor">#80d6ff</color>
+    <color name="primaryLightColor">#6CB7F8</color>
     <color name="primaryDarkColor">#0077c2</color>
     <color name="secondaryColor">#448aff</color>
     <color name="secondaryLightColor">#83b9ff</color>
