--- a/PinSpot/app/src/main/res/values/themes.xml
+++ b/PinSpot/app/src/main/res/values/themes.xml
@@ -18,6 +18,17 @@
         <!-- For switches -->
         <item name="switchStyle">@style/Widget.Material3.CompoundButton.MaterialSwitch</item>
     </style>
+    <style name="TextWiew">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textColorHint">@color/white</item>
+        <item name="android:backgroundTint">@color/primaryColor</item>
+        <item name="android:drawableTint">@color/primaryColor</item>
+    </style>
+    <style name="Button">
+        <item name="android:backgroundTint">@color/primaryColor</item>
+
+
+    </style>
 
 
     <style name="App.Custom.Indicator" parent="Widget.Material3.BottomNavigationView.ActiveIndicator">
