Rimossi lat e lng da preferiti

--- a/PinSpot/app/src/main/res/layout/fav_pin_list_item.xml
+++ b/PinSpot/app/src/main/res/layout/fav_pin_list_item.xml
@@ -3,66 +3,26 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/primaryLightColor"
+    android:background="@color/white"
     xmlns:tools="http://schemas.android.com/tools">
 
     <TextView
         android:id="@+id/textview_fav_pin_title"
-        android:background="@drawable/edit_text_bg"
         android:layout_width="222dp"
         android:layout_height="24dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:textColor="@color/white"
-        android:gravity="center"
+        android:layout_marginTop="36dp"
+        android:background="@drawable/edit_text_bg"
         android:backgroundTint="@color/primaryDarkColor"
-        android:textStyle="bold"
+        android:gravity="center"
         android:textAppearance="?attr/textAppearanceTitleMedium"
+        android:textColor="@color/white"
+        android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/imageview_favorite_pin"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.916"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Pin title" />
-
-    <TextView
-        android:id="@+id/textview_fav_pin_lat"
-        android:layout_width="103dp"
-        android:layout_height="28dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="16dp"
-        android:gravity="center"
-        android:background="@drawable/edit_text_bg"
-        android:backgroundTint="@color/primaryDarkColor"
-        android:textAppearance="?attr/textAppearanceBody1"
-        android:textColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/imageview_favorite_pin"
-        app:layout_constraintHorizontal_bias="0.46"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textview_fav_pin_title"
-        app:layout_constraintVertical_bias="0.0"
-        tools:text="Latitude" />
-
-    <TextView
-        android:id="@+id/textview_fav_pin_lng"
-        android:layout_width="105dp"
-        android:layout_height="28dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="16dp"
-        android:textAppearance="?attr/textAppearanceBody1"
-        android:background="@drawable/edit_text_bg"
-        android:backgroundTint="@color/primaryDarkColor"
-        android:gravity="center"
-        android:textColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/imageview_favorite_pin"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textview_fav_pin_title"
-        app:layout_constraintVertical_bias="0.0"
-        tools:text="Longitude" />
 
     <ImageView
         android:id="@+id/imageview_favorite_pin"
