--- a/PinSpot/app/src/main/res/layout/fav_pin_list_item.xml
+++ b/PinSpot/app/src/main/res/layout/fav_pin_list_item.xml
@@ -3,78 +3,39 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/primaryLightColor"
     xmlns:tools="http://schemas.android.com/tools">
 
     <TextView
         android:id="@+id/textview_fav_pin_title"
+        android:layout_width="240dp"
+        android:layout_height="28dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:background="@drawable/edit_text_bg"
-        android:layout_width="222dp"
-        android:layout_height="24dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:textColor="@color/white"
-        android:gravity="center"
         android:backgroundTint="@color/primaryDarkColor"
-        android:textStyle="bold"
+        android:gravity="center"
         android:textAppearance="?attr/textAppearanceTitleMedium"
-        app:layout_constraintEnd_toStartOf="@+id/imageview_favorite_pin"
-        app:layout_constraintHorizontal_bias="1.0"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/imageview_favorite_pin"
+        app:layout_constraintHorizontal_bias="0.659"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Pin title" />
 
-    <TextView
-        android:id="@+id/textview_fav_pin_lat"
-        android:layout_width="103dp"
-        android:layout_height="28dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="16dp"
-        android:gravity="center"
-        android:background="@drawable/edit_text_bg"
-        android:backgroundTint="@color/primaryDarkColor"
-        android:textAppearance="?attr/textAppearanceBody1"
-        android:textColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/imageview_favorite_pin"
-        app:layout_constraintHorizontal_bias="0.46"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textview_fav_pin_title"
-        app:layout_constraintVertical_bias="0.0"
-        tools:text="Latitude" />
-
-    <TextView
-        android:id="@+id/textview_fav_pin_lng"
-        android:layout_width="105dp"
-        android:layout_height="28dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="16dp"
-        android:textAppearance="?attr/textAppearanceBody1"
-        android:background="@drawable/edit_text_bg"
-        android:backgroundTint="@color/primaryDarkColor"
-        android:gravity="center"
-        android:textColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/imageview_favorite_pin"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textview_fav_pin_title"
-        app:layout_constraintVertical_bias="0.0"
-        tools:text="Longitude" />
-
     <ImageView
         android:id="@+id/imageview_favorite_pin"
-        android:layout_width="73dp"
-        android:layout_height="57dp"
-        android:layout_marginEnd="4dp"
-        android:background="?attr/selectableItemBackgroundBorderless"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_margin="4dp"
+        android:background="@drawable/circle"
         android:focusable="true"
-        android:padding="12dp"
+        android:padding="0.5dp"
         android:scaleType="centerCrop"
         android:contentDescription="Remove the pin the favorite list"
         android:src="@drawable/fav_pin_starred_foreground"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
