--- a/PinSpot/app/src/main/res/layout/fragment_profile.xml
+++ b/PinSpot/app/src/main/res/layout/fragment_profile.xml
@@ -5,18 +5,27 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
     <LinearLayout
         android:id="@+id/linlay1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal" />
+        android:layout_height="244dp"
+        android:gravity="center"
+        android:orientation="horizontal">
 
+        <ImageView
+            android:layout_width="235dp"
+            android:layout_height="217dp"
+            android:layout_marginTop="15dp"
+            android:src="@drawable/undraw_active_options_re_8rj3" />
+
+    </LinearLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="603dp"
+        android:layout_height="513dp"
         android:layout_below="@+id/linlay1"
-        android:layout_marginTop="88dp">
+        android:layout_marginTop="0dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -41,8 +50,8 @@
                     android:textStyle="bold" />
 
                 <TextView
-                    android:layout_width="wrap_content"
                     android:id="@+id/textViewUserEmail"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="sans-serif-light"
                     android:text="mail@gmail.com"
@@ -67,10 +76,38 @@
                     android:id="@+id/switchDegree"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:minHeight="100dp"
+                    android:minHeight="80dp"
                     android:text="Temperatura in gradi celsius:"
 
                     android:textSize="20dp"
+                    android:textStyle="bold"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.513"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/textView_user_email" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="15dp"
+                    android:background="@color/primaryColor" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/search_raggio"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:minHeight="80dp"
+                    android:text="Raggio della ricerca: 50 km"
+                    android:textSize="20dp"
+                    android:gravity="center"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.513"
