--- a/PinSpot/app/src/main/res/layout/fav_pin_list_item.xml
+++ b/PinSpot/app/src/main/res/layout/fav_pin_list_item.xml
@@ -10,6 +10,7 @@
         android:layout_width="240dp"
         android:layout_height="28dp"
         android:layout_marginLeft="10dp"
+        android:layout_marginTop="32dp"
         android:layout_marginRight="10dp"
         android:background="@drawable/edit_text_bg"
         android:backgroundTint="@color/primaryDarkColor"
@@ -18,7 +19,7 @@
         android:textColor="@color/white"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/imageview_favorite_pin"
-        app:layout_constraintHorizontal_bias="0.916"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Pin title" />
