--- a/PinSpot/app/src/main/res/layout/fragment_pin_info.xml
+++ b/PinSpot/app/src/main/res/layout/fragment_pin_info.xml
@@ -47,7 +47,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginTop="4dp"
-        android:text="Duomo di milano"
+        android:text="@string/default_pin_title"
         android:textColor="@color/black"
         android:textSize="35sp"
         android:textStyle="bold"
@@ -60,7 +60,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginTop="84dp"
-        android:text="Meteo"
+        android:text="@string/weather"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -73,7 +73,7 @@
         android:layout_height="32dp"
         android:layout_marginStart="40dp"
         android:layout_marginTop="52dp"
-        android:text="Temp"
+        android:text="@string/temp"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -89,7 +89,7 @@
         android:layout_margin="16dp"
         android:layout_marginStart="20dp"
 
-        android:contentDescription="Spot a new place"
+        android:contentDescription="@string/spot_a_new_place"
 
         android:src="@drawable/star_foreground"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -108,7 +108,7 @@
         android:layout_gravity="end|bottom"
         android:layout_margin="16dp"
 
-        android:contentDescription="Spot a new place"
+        android:contentDescription="@string/spot_a_new_place"
         android:foregroundTint="@color/white"
         android:src="@drawable/ic_baseline_arrow_back_24"
         app:tint="@color/white"
