--- a/PinSpot/app/src/main/res/layout/fragment_sign_up.xml
+++ b/PinSpot/app/src/main/res/layout/fragment_sign_up.xml
@@ -37,7 +37,7 @@
                 android:id="@+id/loginText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Register Now"
+                android:text="@string/register_now"
                 android:textAlignment="center"
                 android:textColor="@color/primaryDarkColor"
                 android:textSize="36sp"
@@ -52,7 +52,7 @@
                 android:background="@drawable/edit_text_bg"
                 android:drawableLeft="@drawable/ic_baseline_person_outline_24"
                 android:drawablePadding="8dp"
-                android:hint="Email"
+                android:hint="@string/e_mail_address"
                 android:padding="8dp"
                 android:textColor="@color/white"
                 android:textColorHint="@color/white" />
@@ -66,7 +66,7 @@
                 android:background="@drawable/edit_text_bg"
                 android:drawableLeft="@drawable/ic_baseline_info_24"
                 android:drawablePadding="8dp"
-                android:hint="Password"
+                android:hint="@string/password"
                 android:inputType="textPassword"
                 android:padding="8dp"
                 android:textColor="@color/white"
@@ -78,7 +78,7 @@
                 android:layout_height="60dp"
                 android:layout_marginTop="30dp"
                 android:backgroundTint="@color/primaryDarkColor"
-                android:text="Register now"
+                android:text="@string/register_now"
                 android:textSize="18sp"
                 app:cornerRadius="20dp" />
             <Button
@@ -87,7 +87,7 @@
                 android:layout_height="57dp"
                 android:background="?android:attr/selectableItemBackground"
                 android:inputType="textCapSentences"
-                android:text="Have an Account?  Log in"
+                android:text="@string/have_an_account_log_in"
                 android:layout_gravity="center"
                 android:textColor="#000000"
                 app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
