--- a/PinSpot/app/src/main/res/layout/activity_insert_pin.xml
+++ b/PinSpot/app/src/main/res/layout/activity_insert_pin.xml
@@ -21,7 +21,7 @@
         android:id="@+id/titleAddNewPin_textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Spot a new place"
+        android:text="@string/spot_a_new_place"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="36sp"
@@ -52,7 +52,7 @@
         android:layout_height="112dp"
         android:layout_gravity="end|bottom"
         android:layout_margin="16dp"
-        android:contentDescription="Spot a new place"
+        android:contentDescription="@string/spot_a_new_place"
         android:src="@drawable/ic_baseline_arrow_back_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -99,7 +99,7 @@
         android:layout_margin="16dp"
         android:layout_marginStart="20dp"
 
-        android:contentDescription="Spot a new place"
+        android:contentDescription="@string/spot_a_new_place"
         android:src="@drawable/library_foreground"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/takePic_button"
@@ -119,7 +119,7 @@
         android:layout_gravity="end|bottom"
         android:layout_margin="16dp"
 
-        android:contentDescription="Spot a new place"
+        android:contentDescription="@string/spot_a_new_place"
         android:src="@drawable/takephoto_foreground"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -140,7 +140,7 @@
         android:drawableLeft="@drawable/ic_baseline_info_24"
         android:drawablePadding="8dp"
         android:drawableTint="@color/white"
-        android:hint="Title"
+        android:hint="@string/title"
         android:minHeight="48dp"
         android:padding="8dp"
         android:textColor="@color/white"
@@ -158,7 +158,7 @@
         android:layout_height="74dp"
         android:layout_marginBottom="56dp"
         android:backgroundTint="@color/primaryColor"
-        android:text="Spot it"
+        android:text="@string/spot_it"
         android:textColor="@color/white"
         android:textSize="18sp"
         app:cornerRadius="20dp"
