--- a/PinSpot/app/src/main/res/layout/fragment_fav_places.xml
+++ b/PinSpot/app/src/main/res/layout/fragment_fav_places.xml
@@ -10,7 +10,7 @@
         android:id="@+id/LogInTxt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Loggati"
+        android:text="@string/login_to_unblock_feature"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
