--- a/PinSpot/app/src/main/res/layout/fragment_map.xml
+++ b/PinSpot/app/src/main/res/layout/fragment_map.xml
@@ -23,7 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
         android:layout_margin="16dp"
-        android:contentDescription="Spot a new place"
+        android:contentDescription="@string/login"
         android:src="@drawable/spot_place_foreground"
         android:backgroundTint="@color/primaryColor"
 
