--- a/PinSpot/app/src/main/res/navigation/welcome_nav_graph.xml
+++ b/PinSpot/app/src/main/res/navigation/welcome_nav_graph.xml
@@ -33,5 +33,12 @@
         <action
             android:id="@+id/action_loginFragment_to_mainActivity"
             app:destination="@id/mainActivity" />
+        <action
+            android:id="@+id/action_loginFragment_to_forgotPasswordFragment"
+            app:destination="@id/forgotPasswordFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/forgotPasswordFragment"
+        android:name="com.blackbox.pinspot.ui.welcome.ForgotPasswordFragment"
+        android:label="ForgotPasswordFragment" />
 </navigation>
