--- a/PinSpot/app/src/main/res/layout/fragment_pin_info.xml
+++ b/PinSpot/app/src/main/res/layout/fragment_pin_info.xml
@@ -73,7 +73,7 @@
         android:layout_height="32dp"
         android:layout_marginStart="40dp"
         android:layout_marginTop="52dp"
-        android:text="@string/temp"
+        android:text="@string/temperature"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
